--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,14 @@
 {
     "env": {
         "browser": true,
+        "node":true,
         "es2021": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
+        "plugin:react/jsx-runtime",
+        "plugin:react-hooks/recommended",
         "prettier"
     ],
     "overrides": [
@@ -17,11 +20,15 @@
             "jsx": true
         }
     },
+    "settings": {
+        "react": {
+          "version": "detect"
+        }
+      },
     "plugins": [
         "react"
     ],
     "rules": {
-        "version":"detect",
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off"
     },
