--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
+    "react-loading-skeleton": "^3.1.1",
     "react-router-dom": "^6.8.1"
   }
 }
